docs and code fix
