# internal/handler/middleware/article/input.go
@@ -4,10 +4,12 @@ import (
 	"github.com/gin-gonic/gin"
 	"lcode/config"
 	"lcode/internal/domain"
+	"lcode/pkg/db"
 	"lcode/pkg/gin_helpers"
 	"lcode/pkg/http_lib/http_helper"
 	"log/slog"
 	"net/http"
+	"strconv"
 )
 
 type (
@@ -96,10 +98,23 @@ func (m *Middleware) ValidateDeleteArticleInput(c *gin.Context) {
 func (m *Middleware) ValidateArticleListByParamsInput(c *gin.Context) {
 	var inp domain.ArticleParamsInput
 
-	if err := c.ShouldBindJSON(&inp); err != nil {
-		http_helper.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+	inp.Sort.ByDate = db.SortType(c.Query("sort"))
 
-		return
+	pAfterID, ok := c.GetQuery("after_id")
+	if ok {
+		inp.Pagination.AfterID = &pAfterID
+	}
+
+	pLimitStr, ok := c.GetQuery("limit")
+	if !ok {
+		inp.Pagination.Limit = m.cfg.QueryParams.Limit
+	} else {
+		pLimit, err := strconv.Atoi(pLimitStr)
+		if err == nil {
+			inp.Pagination.Limit = pLimit
+		} else {
+			inp.Pagination.Limit = m.cfg.QueryParams.Limit
+		}
 	}
 
 	categories, ok := c.GetQueryArray("category")
